# ura

./: .clangd  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.toml  justfile
assets/: PKGBUILD  init.lua  ura.desktop
assets/completions/zsh/: _ura  _ura-cmd  _ura-plugin  _ura-shell
docs/: lua_completion.md  waybar-workspace.md
docs/en/: lua_completion.md  waybar-workspace.md
docs/zh-cn/: README-zh_CN.md
examples/: init.lua  scratchpad.py  ura
examples/lua/: hook.lua  keymap.lua  layout.lua  option.lua  rules.lua  util.lua
examples/scripts/: dpms_off.lua  hide_cursor.lua
examples/ura/: init.lua
examples/ura/lua/: env.lua  keymap.lua
include/flexible/: flexible.hpp
include/protocols/: wlr-output-power-management-unstable-v1-protocol.h
include/ura/: api.hpp  callback.hpp  client.hpp  config.hpp  cursor.hpp  decoration.hpp  keyboard.hpp  layer_shell.hpp  layout.hpp  lua.hpp  output.hpp  popup.hpp  runtime.hpp  seat.hpp  server.hpp  session_lock.hpp  surface.hpp  text_input.hpp  toplevel.hpp  ura.hpp  util.hpp  view.hpp  workspace.hpp
include/ura/api/: core.hpp  lua.hpp
include/ura/core/: callback.hpp  core.hpp  dispatcher.hpp  global.hpp  ipc.hpp  log.hpp  lua.hpp  runtime.hpp  server.hpp  state.hpp
include/ura/lua/: api.hpp  hook.hpp  lua.hpp
include/ura/lua/api/: core.hpp  lua.hpp
include/ura/seat/: cursor.hpp  keyboard.hpp  pointer.hpp  seat.hpp  tablet.hpp  text_input.hpp
include/ura/util/: flexible.hpp  keybinding.hpp  rgb.hpp  util.hpp  vec.hpp
include/ura/view/: client.hpp  layer_shell.hpp  layout.hpp  output.hpp  popup.hpp  session_lock.hpp  toplevel.hpp  view.hpp  workspace.hpp
lua/ura/: init.lua  type.lua
lua/ura/_runtime/: cmd.lua  fn.lua  hook.lua  init.lua  keymap.lua  layout.lua  opt.lua  win.lua
lua/ura/_runtime/meta/: api.lua  fn.lua  hook.lua  keymap.lua  layout.lua  win.lua
lua/ura/runtime/: _cmd.lua  _hook.lua  _keymap.lua  _layout.lua  _win.lua
lua/ura/runtime/_meta/: api.lua  cmd.lua  fn.lua  hook.lua  layout.lua  win.lua
lua/ura/runtime/lua/ura/: cmd.lua  fn.lua  init.lua
lua/ura/runtime/meta/: fn.lua  type.lua
protocols/: ura-ipc.xml
scripts/: ura-cmd  ura-debug  ura-opt  ura-plugin  ura-repl  ura-shell
shell/: Cargo.toml
shell/src/: ipc.rs  main.rs
src/: activation.cpp  api.cpp  client.cpp  config.cpp  cursor.cpp  decoration.cpp  input.cpp  ipc.cpp  keyboard.cpp  layer_shell.cpp  log.cpp  lua.cpp  main.cpp  output.cpp  popup.cpp  runtime.cpp  server.cpp  state.cpp  toplevel.cpp  workspace.cpp
src/api/: core.cpp  lua.cpp
src/cursor/: callback.cpp  cursor.cpp
src/layer_shell/: callback.cpp  layer_shell.cpp
src/lua/: api.cpp  lua.cpp
src/lua/api/: api.cpp  core.cpp  lua.cpp
src/output/: callback.cpp  manager.cpp  output.cpp  workspace.cpp
src/popup/: callback.cpp  popup.cpp
src/seat/: callback.cpp  idle.cpp  pointer.cpp  seat.cpp
src/seat/cursor/: callback.cpp  cursor.cpp
src/seat/keyboard/: callback.cpp  keyboard.cpp
src/seat/pointer/: callback.cpp  pointer.cpp
src/seat/tablet/: callback.cpp  tablet.cpp
src/seat/text_input/: callback.cpp  input_method.cpp  text_input.cpp
src/server/: event_loop.cpp  server.cpp
src/toplevel/: activation.cpp  callback.cpp  decoration.cpp  foreign.cpp  toplevel.cpp
src/util/: flexible.cpp
src/view/: client.cpp  view.cpp
src/view/layer_shell/: callback.cpp  layer_shell.cpp
src/view/output/: callback.cpp  output.cpp
src/view/popup/: callback.cpp  popup.cpp
src/view/session_lock/: callback.cpp  session_lock_surface.cpp
src/view/toplevel/: activation.cpp  callback.cpp  decoration.cpp  foreign.cpp  layout.cpp  toplevel.cpp
src/view/workspace/: focus.cpp  workspace.cpp
src/workspace/: focus.cpp  workspace.cpp
tests/: app_id.lua  debugger.lua  hook.lua  json.lua  option.lua  output.lua  range.lua  scale.lua  scratchpad.lua  userdata.lua  validate.lua
tools/scripts/: ura-cmd  ura-repl
tools/ura-shell/: Cargo.toml
tools/ura-shell/src/: main.rs
ura/: Cargo.toml
ura-core/: Cargo.toml
ura-core/src/: controller.rs  cursor.rs  drawing.rs  focus.rs  input_handler.rs  lib.rs  render.rs  state.rs  udev.rs  winit.rs
ura-core/src/shell/: element.rs  grabs.rs  mod.rs  ssd.rs  x11.rs  xdg.rs
ura/plugins/builtin/lua/builtin/layout/: floating.lua  fullscreen.lua  init.lua  maximize.lua  tiling.lua
ura/runtime/lua/ura/: cmd.lua  fn.lua  g.lua  hook.lua  init.lua  keymap.lua  layout.lua  opt.lua
ura/runtime/lua/ura/class/: block.lua  init.lua  output.lua  segment.lua  window.lua
ura/runtime/meta/: api.lua  cmd.lua  fn.lua  hook.lua  layout.lua
ura/src/: cfg.rs  keymap.rs  main.rs
uracil/: Cargo.toml
uracil/src/: client.rs  main.rs  shell.rs
uracil/src/shell/: helper.rs  mod.rs
