[package]
name = "ura-core"
version = "0.1.0"
edition = "2021"
authors = ["levinion <levinnion@gmail.com>"]
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.2.1"
fps_ticker = { version = "1.0.0", optional = true }
image = { version = "0.25.0", default-features = false, optional = true }
rand = "0.8"
tracing = { version = "0.1.37", features = [
  "max_level_trace",
  "release_max_level_debug",
] }
x11rb = { version = "0.13.0", optional = true }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
thiserror = "1"
xcursor = { version = "0.3.3", optional = true }
xkbcommon = "0.7.0"
renderdoc = { version = "0.12.1", optional = true }
puffin_http = { version = "0.16", optional = true }
profiling = { version = "1.0" }

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
default-features = false
features = ["desktop", "wayland_frontend"]
rev = "e5f0068"

[dependencies.smithay-drm-extras]
git = "https://github.com/Smithay/smithay"
optional = true
rev = "e5f0068"


[build-dependencies]
gl_generator = "0.14"

[features]
debug = ["fps_ticker", "image/png", "renderdoc"]
default = ["egl", "winit", "udev", "xwayland"]
egl = ["smithay/use_system_lib", "smithay/backend_egl"]
test_all_features = ["default", "debug"]
udev = [
  "smithay-drm-extras",
  "smithay/backend_libinput",
  "smithay/backend_udev",
  "smithay/backend_drm",
  "smithay/backend_gbm",
  "smithay/backend_vulkan",
  "smithay/backend_egl",
  "smithay/backend_session_libseat",
  "image",
  "smithay/renderer_gl",
  "smithay/renderer_pixman",
  "smithay/renderer_multi",
  "xcursor",
]
winit = ["smithay/backend_winit", "smithay/backend_drm"]
xwayland = [
  "smithay/xwayland",
  "x11rb",
  "smithay/x11rb_event_source",
  "xcursor",
]
profile-with-puffin = ["profiling/profile-with-puffin", "puffin_http"]
profile-with-tracy = ["profiling/profile-with-tracy"]
profile-with-tracy-mem = ["profile-with-tracy"]
renderer_sync = []
